Compiler construction/Solutions/compiler-construction-xi-2/tests/pracownia2/error/085_expecting2_given_proc.xi
g()

f():int,int
{
    return g()
}
//@PRACOWNIA
//@should_not_typecheck
